--- a/lib/site/index_template.html
+++ b/lib/site/index_template.html
@@ -8,18 +8,29 @@
       name="description"
       content="Is Mr. Brightside by The Killers still the UK charts? Check in for an updated chart position."
     />
-    <meta
-      name="keywords"
-      content="mr brightside, mr. brightside, the killers, chart, chart position"
-    />
+    <meta name="keywords" content="mr brightside, mr. brightside, the killers, chart, chart position" />
     <meta name="robots" content="index, nofollow" />
     <link rel="preload" href="styles.css" as="style" />
     <link rel="stylesheet" type="text/css" href="styles.css" />
-    <link
-      rel="canonical"
-      href="https://ismrbrightsidestillintheukcharts.com/"
-    />
+    <link rel="canonical" href="https://ismrbrightsidestillintheukcharts.com/" />
   </head>
+  <script>
+    
+    const raw_data = JSON.parse('generated_data_json')
+
+    const handleOnLoad = () => {
+      const answerElement = document.getElementById("answer_template");
+      answerElement.innerHTML = raw_data.position ? `Yes, #${raw_data.position}` : `No =(`;
+
+      const updatedAtElement = document.getElementById("updated_at_template");
+      updatedAtElement.innerHTML = `Updated: ${new Date(raw_data.updatedAt).toLocaleString()}`;
+
+      const weeksInTop100Element = document.getElementById("total_weeks_template");
+      weeksInTop100Element.innerHTML = `${raw_data.weeksInTop100}+`;
+    };
+
+    window.onload = handleOnLoad;
+  </script>
   <body>
     <div class="wrapper">
       <main>
@@ -27,14 +38,10 @@
 
         <section>
           <div id="results-container">
-            <p id="answer_template">
-              Yes, #43
-            </p>
-            <a
-              id="updated_at_template"
-              href="https://www.officialcharts.com/charts/singles-chart/"
-              target="_blank"
-            >Updated: 1/13/2024, 9:02:49 PM</a>
+            <p id="answer_template">Yes, #43</p>
+            <a id="updated_at_template" href="https://www.officialcharts.com/charts/singles-chart/" target="_blank"
+              >Updated: 1/13/2024, 9:02:49 PM</a
+            >
           </div>
 
           Mr. Brightside was released by The Killers in 2004 and has spent
@@ -42,7 +49,6 @@
         </section>
 
         <aside class="youtube-container">
-          <p>Listen now:</p>
           <iframe
             src="https://www.youtube.com/embed/gGdGFtwCNBE?si=9oEkXSyrEz2qUjux"
             title="Mr. Brightside Music Video (Youtube)"
@@ -53,14 +59,8 @@
         </aside>
       </main>
       <footer class="credits">
-        Created by
-        <a href="https://github.com/kaplantm" rel="noopener" target="_blank"
-          >Toni</a
-        ><br />in parallel thinking with<br /><a
-          href="https://ismrbrightsidestillinthecharts.com"
-          rel="noopener"
-          target="_blank"
-          >ismrbrightsidestillinthecharts.com</a
+        <a href="https://github.com/kaplantm/brightside-node-scraper/tree/master" rel="noopener" target="_blank"
+          >github</a
         >
       </footer>
     </div>
